fix(exercices): 6 and 7

--- a/src/__tests__/exercices/6.md
+++ b/src/__tests__/exercices/6.md
@@ -71,7 +71,11 @@ Tu peux créer le test suivant :
 
 Il est possible de "mock" nos providers, quand ceux-ci prennes des valeurs par défaut.
 
-Dans un autre `describe`, on va tester un deuxième component, dans le même fichier : `DashboardHeader`. Il faut tester le cas ou il n'y a pas de user et le cas ou il y en as un.
+Dans un autre `describe`, on va tester deux autres component : `DashboardHeader` et `DashboardUser`.
+
+Pour le `DashboardHeader`, il faut tester le cas ou il n'y a pas de user et le cas ou il y en as un.
+
+Tu verras que notre `UserContextProvider` prends en paramètres un `defaultUser`, il serait intéressant de pouvoir le définir via notre function `customRender`.
 
 Pour ça, tu peux suivre ce pattern :
 
