--- a/src/__tests__/exercices/7.md
+++ b/src/__tests__/exercices/7.md
@@ -1,18 +1,10 @@
-# Les tests des hooks
+# Les tests des hooks
 
 Comment tester des hooks ?
 
-C'est vraiment pas une chose facile, car les hooks sont directement liée aux composants,
-mais ils n'ont pas d'interface graphique !
+Pour ça on va explorer toutes les techniques possibles pour tester nos hooks. Encore une fois, `react-testing-library` nous ferras un cadeau dans la partie 4.
 
-Le but des tests est de représenter le plus fidèlement possible l'utilisation de notre hook,
-et les hooks sont toujours utiliser dans des composants. Il faudrait donc peut-être rendre
-nos hooks dans des composants ?
-
-C'est ce qu'on va voir, car il y 4 moyens de tester nos hooks, et tu pourras choisir
-le plus approprier dans tes use-case.
-
-## Part 1
+## Part 1
 
 Le hooks que l'on va tester c'est `useCounter` il retourne 5 éléments :
 
@@ -28,13 +20,14 @@ Pour réaliser ce premier test, tu vas créer un composant `TestComponent` ou tu
 le hooks et retourner des boutons pour intéragir avec le hooks, il faudra aussi afficher la
 valeur du hooks.
 
-## Part 2
+## Part 2
 
-Au lieu d'utiliser un composant qui affiche des boutons etc... pour intéragir avec notre hooks,
+Au lieu d'utiliser un composant qui affiche des boutons etc... pour interagir avec notre hooks,
 on va définir notre composant dans notre test et assigné les valeurs de retours
-à une variable avec laquel on va pouvoir intéragir.
+à une variable déclarer directement à l'intérieur de notre test.
 
 ```ts
+// Tout ceci est dans un "test(...)"
 let counter: UseCounterOutput = null as unknown as UseCounterOutput;
 
 const TestComponent = () => {
@@ -46,12 +39,9 @@ const TestComponent = () => {
 render(<TestComponent />);
 ```
 
-(ce code est ajouter directement dans le `test`)
+En appelant `counter.setValue` ou `counter.count` tu vas pouvoir interagir avec le hooks directement dans tes tests.
 
-En appelant `counter.setValue` ou `counter.count` tu vas pouvoir intéragir avec le hooks
-directement dans tes tests.
-
-Tu vas aussi pouvoir utiliser `act` pour simuler des intéractions avec le hooks.
+Tu vas aussi pouvoir utiliser `act` pour simuler des interactions avec le hooks.
 
 ```ts
 act(() => {
@@ -59,20 +49,17 @@ act(() => {
 });
 ```
 
-`act` est utils ici car on va update un state dans un test, `act` viens prévenir et attendre
-que ce changement ce produise et ne créer pas des bugs dans nos tests.
+`act` est utils ici car on va update un state dans un test, `act` viens prévenir et attendre que ce changement ce produise avant de passer à la suite.
 
 📖 [Quand utiliser act](https://flyingsquirrel.medium.com/when-should-i-use-act-in-react-testing-library-d7dd22a3340e)
 📖 [Bien utiliser act](https://codilime.com/blog/why-should-you-be-grateful-for-act-warnings-in-react-tests/)
 📖 [act react docs](https://reactjs.org/docs/test-utils.html#act)
 
-## Part 3
+## Part 3
 
-On veut créer un deuxième test pour vérifier que la `initialValue` est bien définit lors
-du render de notre hooks.
+On veut créer un _deuxième test_ pour vérifier que la `initialValue` est bien définit lors du render de notre hooks.
 
-Pour ça il faudrait refaire tout le setup qu'on à fait juste avant. Pour éviter de copier/coller
-notre code on va créer une fonction `setup` qui fait tout ça pour nous.
+Pour ça il faudrait refaire tout le setup qu'on à fait juste avant. Pour éviter de copier/coller notre code on va créer une fonction `setup` qui fait tout ça pour nous.
 
 ```ts
 const setup = () => {
@@ -93,8 +80,7 @@ const setup = () => {
 };
 ```
 
-Une fois ceci fais tu vas pouvoir créer un deuxième test qui va utiliser cette fonction
-pour faire le setup.
+Une fois ceci fais tu vas pouvoir créer un deuxième test qui va utiliser cette fonction pour faire le setup.
 
 ```ts
 const counter = setup();
@@ -102,10 +88,9 @@ const counter = setup();
 
 ⚠️ Je te laisse customisé ma fonction `setup` pour quel accept `initialValue` en argument !
 
-## Part 4
+## Part 4
 
-Bon je vais pas te mentir plus longtemps, il existe un fonction qui permet de faire tout ça
-sans avoir besoin de créer pleins de ligne de code etc...
+Bon je vais pas te mentir plus longtemps, il existe un fonction qui permet de faire tout ça sans avoir besoin de créer pleins de ligne de code etc...
 
 ```ts
 import { renderHook } from '@testing-library/react';
