--- a/src/__tests__/exercices/4.md
+++ b/src/__tests__/exercices/4.md
@@ -3,7 +3,7 @@
 Jusqu'ici on a mocké du JavaScript, des fonctions etc... Mais beaucoup de composant
 sont directement liée à des API externes.
 
-Il est important de pouvoir eux aussi les testser :
+Il est important de pouvoir eux aussi les tester :
 
 - Que se passe-t-il si l'API à une erreur ?
 - Que se passe-t-il si l'API est lente ?
